force-app/main/default/objects/ChatSession__c/ChatSession__c.object-meta.xml
<CustomObject>
    <description>Mock ChatSession</description>
    <label>ChatSession</label>
    <nameField>
        <label>ChatSession</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChatSession</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>