force-app/main/default/objects/ChatSession__c/fields/ChatEnded__c.field-meta.xml
<CustomField>
    <fullName>ChatEnded__c</fullName>
    <label>ChatEnded</label>
    <type>DateTime</type>
</CustomField>