force-app/main/default/objects/ChatSession__c/fields/ChatStarted__c.field-meta.xml
<CustomField>
    <fullName>ChatStarted__c</fullName>
    <label>ChatStarted</label>
    <type>DateTime</type>
</CustomField>