force-app/main/default/objects/ChatSession__c/fields/ChatStatus__c.field-meta.xml
<CustomField>
    <fullName>ChatStatus__c</fullName>
    <label>ChatStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>