force-app/main/default/objects/ChatSession__c/fields/PrimaryCase__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ChatSession</relationshipLabel>
    <relationshipName>ChatSession</relationshipName>
    <type>Lookup</type>
</CustomField>