force-app/main/default/objects/ChatSession__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>ContactName__c</columns>
    <columns>ChatStarted__c</columns>
    <columns>ChatEnded__c</columns>
    <columns>ChatStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>